2006-05-01  John W. Eaton  <jwe@octave.org>

	* error.h (Vwarning_option): Delete.
	* variables.cc (looks_like_struct): Remove use from commented code.

	* gripes.cc, gripes.h (gripe_implicit_conversion): New arg, ID.
	Change all uses.

	* defaults.cc (set_local_site_defaults_file, set_site_defaults_file):
	Allow filenames to be set from the environment.

	* oct-map.cc (octave_map::resize): No longer const.
	* ov-struct.h (octave_struct::resize): Deal with it.

	* octave.cc (initialize_error_handlers): Also call
	set_liboctave_warning_with_id_handler.
	(execute_startup_files): Check that home_rc is not an empty string.
	(F__version_info__): Resize vinfo before assigining elements.

	* ov-base.cc (warn_num_to_str, warn_resize_on_range_error):
	Delete functions.
	(symbols_of_ov_base): Delete DEFVARS.
	(Vwarn_num_to_str, Vwarn_resize_on_range_error): Delete variables.
	(value::convert_to_str): Check state of warning ID
	Octave:num-to-str instead of using Vwarn_num_to_str.
	* OPERATORS/op-chm.cc: Likewise.
	* ov-base.h (Vwarn_num_to_str, Vwarn_resize_on_range_error):
	Delete decls.

	* ov-list.cc (octave_list::assign): Call warning_with_id instead
	of warning.

	* parse.y (warn_assign_as_truth_value, warn_associativity_change,
	warn_function_name_clash, warn_future_time_stamp,
	warn_missing_semicolon, warn_precedence_change,
	warn_variable_switch_label, symbols_of_parse):	
	Delete DEFVARs and functions.
	(Vwarn_assign_as_truth_value, Vwarn_associativity_change,
	Vwarn_function_name_clash, Vwarn_future_time_stamp,
	Vwarn_missing_semicolon, Vwarn_precedence_change,
	Vwarn_variable_switch_label): Delete variables.
	* parse.h (Vwarn_future_time_stamp): Delete decl.
	* parse.y (fold): Check state of warning ID
	Octave:associativity-change and Octave:precedence-change instead
	of using Vwarn_associativity_change and Vwarn_precedence_change.
	(maybe_warn_associativity_change, maybe_warn_missing_semi,
	maybe_warn_assign_as_truth_value, make_binary_op, make_boolean_op,